--- a/ParcialOscarLandivar/ParcialOscarLandivar/Web.config
+++ b/ParcialOscarLandivar/ParcialOscarLandivar/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ParcialOscarLandivar-20200919111810.mdf;Initial Catalog=aspnet-ParcialOscarLandivar-20200919111810;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Server=tcp:srvoscarbd.database.windows.net,1433;Initial Catalog=ParcialBDOscarLandivar;Persist Security Info=False;User ID=oscar;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
